--- a/style.css
+++ b/style.css
@@ -437,14 +437,20 @@ width: 896px;
 
 .section9{
 
-    margin: 20px 140px 100px 140px;
+    margin: 20px 100px 100px 140px;
+  
+    border-radius: 16px;
+    justify-content: space-around;
 
 
 }
 .s9-container1{
     display: flex;
     gap: 20px;
-    padding-bottom: 20px;
+  padding: 10px ;
+
+
+   
 }
 
 
@@ -452,6 +458,7 @@ width: 896px;
 .s9-container2{
     display: flex;
     gap: 20px;
+    padding: 10px ;
 }
 
 .s9-container1-img1:hover{
@@ -460,7 +467,7 @@ width: 896px;
     border-radius: 40px;
     cursor: pointer;
     transition: all 0.5s;
-    
+ 
 }
 .s9-container1-img2:hover{
 
