--- a/style.css
+++ b/style.css
@@ -111,8 +111,8 @@ font-weight: 700;
 
     margin: 50px 140px 120px 140px;
    
-    background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
-    background-image:  url('../resources/Vectorrr.png');
+
+    background:linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%),  url('../resources/Vectorrr.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
@@ -134,6 +134,7 @@ font-weight: 700;
    
 }
 
+
 #container2-img{
   
     width: 100%;
@@ -153,9 +154,9 @@ font-weight: 700;
     /* padding-left: 10%; */
     padding-top: 126px;
    padding-left: 50px ;
-   padding-right: 100px;
+  
    
-    max-width: 200px;
+   
 }
 
 .container2 .container2-h1{
@@ -602,7 +603,60 @@ footer{
     
     background-color: black;
    height: 600px;
+   padding: 0 140px;
 }
-.f-container1 h1{
-color: white;
+
+.f-container1{
+    color: #FFF;
+font-family: Inter;
+font-size: 24px;
+
+font-weight: 500;
+
+
+display: flex;
+justify-content: space-between;
+
+padding: 100px 0 50px 0;
+
+
+
+}
+.f-c1-p1{
+    width: 400px;
+}
+.f-c1-contact11{
+    display: flex;
+    
+}
+
+hr{
+    background: rgba(255, 255, 255, 0.15);
+   
+height: 1px;
+
+}
+
+.f-c1-contact{
+    display: block;
+}
+
+.f-container99{
+    text-align: center;
+}
+#ab{
+   padding: 50px 10px;
+
+}
+.f-container2{
+    color: #FFF;
+font-family: Inter;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+display: flex;
+justify-content: space-between;
+padding-top: 20px;
+
 }
